--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Header con menú -->
   <header>
     <div class="header-content">
-      <h1>José Miguel Chamorro Gutiérrez</h1>
+      <h1>José Chamorro</h1>
       <p>Kinesiólogo · Quiropráctico · Análisis y Ciencia de Datos en Salud</p>
     </div>
     <nav class="navbar">
@@ -40,7 +40,7 @@
         <img src="https://github.com/joch89.png" alt="Foto de José Chamorro">
       </div>
       <div class="about-text text-justify">
-        <p>Soy un profesional del <strong>Área de la Salud</strong> con más de 10 años de experiencia en Rehabilitación Musculoesquelética y Deportiva.</p>
+        <p>Soy <strong>José Chamorro</strong>, kinesiólogo y Quiropráctico con más de 10 años de experiencia en Rehabilitación Musculoesquelética y Deportiva.</p>
         <p>Actualmente me encuentro en un proceso de transición hacia el <strong>Health Data Science</strong>, explorando el uso de <strong>Análisis de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong> aplicados a la salud y el rendimiento humano.</p>
         <p>Explora mis proyectos y conoce cómo aplico la analítica y la inteligencia artificial en contextos clínicos y deportivos.</p>
       </div>
@@ -208,4 +208,3 @@
 
 </body>
 </html>
-
