--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
         </ul>
         <p><strong>Reflexión:</strong> Aprendí a integrar un modelo de ML con una API REST, dockerizar la aplicación y automatizar el despliegue con CI/CD, asegurando reproducibilidad y escalabilidad.</p>
         <div class="buttons">
-          <a href="https://joch89.github.io/Prediccion-Cancer-de-mama/" target="_blank">Ver Proyecto</a>
-          <a href="https://github.com/joch89/Prediccion-Cancer-de-mama" target="_blank">Código</a>
+          <a href="https://github.com/joch89/Prediccion-Cancer-de-mama" target="_blank">Link a Github</a>
         </div>
       </div>
 
@@ -148,48 +147,49 @@
         </ul>
         <p><strong>Reflexión:</strong> Aprendí sobre detección de landmarks, análisis cinemático y procesamiento de video en tiempo real, integrando datos cuantitativos y visuales para mejorar la técnica deportiva.</p>
         <div class="buttons">
-          <a href="https://joch89.github.io/analisis-patada-mediapipe/" target="_blank">Ver Proyecto</a>
-          <a href="https://github.com/joch89/analisis-patada-mediapipe" target="_blank">Código</a>
+          <a href="https://github.com/joch89/analisis-patada-mediapipe" target="_blank">Link a Github</a>
         </div>
       </div>
-
-      <!-- Proyecto 3 -->
-      <div class="project-card text-justify">
-        <h3>Proyecto en Construcción</h3>
-        <p><strong>Descripción:</strong> Nuevo proyecto de Machine Learning en desarrollo.</p>
-        <p><strong>Objetivos:</strong> Muy pronto disponible.</p>
-        <p><strong>Tecnologías:</strong> Por definir</p>
-        <p><strong>Reflexión:</strong> Por definir</p>
-        <div class="buttons">
-          <a href="#">Próximamente</a>
-        </div>
-      </div>
-
+      
     </div>
   </section>
 
-  <!-- Proyectos de Análisis de Datos -->
-  <section id="data-analysis">
-    <h2>Proyectos de Análisis de Datos</h2>
-    <div class="projects-carousel">
-      <div class="project-card">
-        <h3>Análisis del Flujo del Paciente</h3>
-        <p>Exploración de datos hospitalarios para optimizar rutas de atención y tiempos de espera.</p>
-        <div class="buttons">
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/" target="_blank">Ver Proyecto</a>
-          <a href="https://github.com/joch89/Analisis-del-Flujo-del-Paciente" target="_blank">Código</a>
-        </div>
-      </div>
-      <div class="project-card">
-        <h3>EDA en CMBD GRD 2023 FONASA</h3>
-        <p>Análisis exploratorio de los GRD hospitalarios para entender distribución de casos y costos asociados.</p>
-        <div class="buttons">
-          <a href="https://joch89.github.io/EDA-en-CMBD-GRD-2023-FONASA/" target="_blank">Ver Proyecto</a>
-          <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA" target="_blank">Código</a>
-        </div>
+<!-- Proyectos de Análisis de Datos -->
+<section id="data-analysis">
+  <h2>Proyectos de Análisis de Datos</h2>
+  <div class="projects-carousel">
+    
+    <div class="project-card">
+      <h3>Análisis del Flujo del Paciente</h3>
+      <p><strong>Descripción:</strong> Análisis de egresos hospitalarios basado en datos GRD, enfocado en la atención de pacientes con colecistectomía laparoscópica (sin complicaciones, con complicaciones y con complicaciones mayores). Se visualizan los flujos de atención y tiempos de espera para optimizar procesos internos y mejorar la experiencia del paciente.</p>
+      <p><strong>Objetivos:</strong></p>
+      <ul>
+        <li>Identificar cuellos de botella en la atención hospitalaria.</li>
+        <li>Optimizar rutas de atención y tiempos de espera.</li>
+        <li>Generar reportes visuales que faciliten la toma de decisiones.</li>
+      </ul>
+      <div class="buttons">
+        <a href="https://github.com/joch89/Analisis-del-Flujo-del-Paciente" target="_blank">Link a Github</a>
       </div>
     </div>
-  </section>
+
+    <div class="project-card">
+      <h3>EDA en CMBD GRD 2023 FONASA</h3>
+      <p><strong>Descripción:</strong> Análisis exploratorio de datos (EDA) de egresos hospitalarios del año 2023 obtenidos de FONASA. Se realizó limpieza de datos, revisión de valores nulos y transformación de columnas clave, permitiendo comprender la distribución de casos, costos asociados y características de los hospitales.</p>
+      <p><strong>Objetivos:</strong></p>
+      <ul>
+        <li>Explorar la calidad y consistencia de los datos hospitalarios.</li>
+        <li>Analizar distribución de casos y costos por hospital y GRD.</li>
+        <li>Crear subconjuntos de datos filtrados por hospital para análisis específicos.</li>
+      </ul>
+      <div class="buttons">
+        <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA" target="_blank">Link a Github</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- Contacto -->
   <section id="contact">
@@ -197,7 +197,6 @@
     <div class="contact-container" style="text-align:center; margin-bottom:30px;">
       <p>Email: <a href="mailto:jm.chamorro.g@gmail.com">jm.chamorro.g@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/josé-chamorro/" target="_blank">José Chamorro</a></p>
-      <p>Instagram: <a href="https://www.instagram.com/[tuusuario]" target="_blank">[Tu usuario]</a></p>
     </div>
   </section>
 
@@ -208,3 +207,4 @@
 
 </body>
 </html>
+
