--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <h2>Experiencia Laboral</h2>
     <div class="experience-container">
       <ul>
-        <li><strong>Centro Quiropráctico Viña Salud</strong> – Socio Fundador & Kinesiólogo-Quiropráctico Clínico (NOV 2017 – Actualidad)</li>
-        <li><strong>Hospital de Quilpué</strong> – Analista y Codificador GRD (Jun 2024 – MAY 2025)</li>
-        <li><strong>Hospital Biprovincial Quillota-Petorca</strong> – Analista y Codificador GRD (Ene 2023 – MAR 2023)</li>
-        <li><strong>Centro de Salud Alma</strong> – Kinesiólogo & Quiropráctico Clínico (OCT 2023 – Actualidad)</li>
+        <li><strong>Centro Quiropráctico Viña Salud</strong> – Socio Fundador & Kinesiólogo-Quiropráctico Clínico (noviembre 2017 – Actualidad)</li>
+        <li><strong>Hospital de Quilpué</strong> – Analista y Codificador GRD (junio 2024 – mayo 2025)</li>
+        <li><strong>Hospital Biprovincial Quillota-Petorca</strong> – Analista y Codificador GRD (enero 2023 – marzo 2023)</li>
+        <li><strong>Centro de Salud Alma</strong> – Kinesiólogo & Quiropráctico Clínico (octubre 2023 – Actualidad)</li>
       </ul>
     </div>
   </section>
@@ -190,7 +190,6 @@
   </div>
 </section>
 
-
   <!-- Contacto -->
   <section id="contact">
     <h2>Contacto</h2>
@@ -207,5 +206,6 @@
 
 </body>
 </html>
+
 
 
