--- a/index.html
+++ b/index.html
@@ -157,18 +157,18 @@
         <p><strong>Descripción:</strong> Proyecto de **Aprendizaje No Supervisado** para segmentar pacientes del **Pima Indians Diabetes Dataset** e identificar perfiles atípicos (anomalías). El enfoque se centró en evaluar la interpretabilidad clínica de los *clusters* y la robustez de los *outliers* detectados.</p>
         <p><strong>Objetivos:</strong></p>
         <ul>
-          <li>Aplicar y comparar distintos algoritmos de **Clustering** (K-Means, DBSCAN, HDBSCAN) en un dataset de salud.</li>
-          <li>Utilizar técnicas de **Reducción de Dimensionalidad** (PCA, UMAP, t-SNE) para la visualización e identificación de la mejor representación de los datos.</li>
-          <li>Implementar modelos de **Detección de Anomalías** (Isolation Forest, One-Class SVM) para identificar pacientes con patrones clínicos inusuales.</li>
-          <li>Evaluar los resultados del *clustering* utilizando métricas como el **Coeficiente de Silhouette** y el **Índice de Davies-Bouldin**.</li>
-          <li>Justificar la elección final del modelo de *clustering* en base a las métricas y la interpretabilidad clínica de los segmentos.</li>
+          <li>Aplicar y comparar distintos algoritmos de <strong>Clustering</strong> (K-Means, DBSCAN, HDBSCAN) en un dataset de salud.</li>
+          <li>Utilizar técnicas de <strong>Reducción de Dimensionalidad</strong> (PCA, UMAP, t-SNE) para la visualización e identificación de la mejor representación de los datos.</li>
+          <li>Implementar modelos de <strong>Detección de Anomalías</strong> (Isolation Forest, One-Class SVM) para identificar pacientes con patrones clínicos inusuales.</li>
+          <li>Evaluar los resultados del <strong>clustering</strong> utilizando métricas como el <strong>Coeficiente de Silhouette</strong> y el <strong>Índice de Davies-Bouldin</strong>.</li>
+          <li>Justificar la elección final del modelo de <strong>clustering</strong> en base a las métricas y la interpretabilidad clínica de los segmentos.</li>
         </ul>
         <p><strong>Tecnologías:</strong> Python, Scikit-learn, UMAP, HDBSCAN, Pandas, Numpy, Matplotlib, Seaborn</p>
         <p><strong>Resultados:</strong></p>
         <ul>
-          <li>Identificación de **grupos de pacientes** con características clínicas similares (ej., alto IMC + alta glucosa).</li>
-          <li>**Visualización en 2D** del *clustering* de pacientes, demostrando que **UMAP + DBSCAN/HDBSCAN** supera a PCA.</li>
-          <li>Un conjunto claro de **pacientes anómalos** cuyo perfil clínico fue validado por múltiples modelos (Isolation Forest y ruido de DBSCAN).</li>
+          <li>Identificación de <strong>grupos de pacientes</strong> con características clínicas similares (ej., alto IMC + alta glucosa).</li>
+          <li><strong>Visualización en 2D</strong> del clustering de pacientes, demostrando que <strong>UMAP + DBSCAN/HDBSCAN</strong> supera a PCA.</li>
+          <li>Un conjunto claro de pacientes anómalos cuyo perfil clínico fue validado por múltiples modelos (Isolation Forest y ruido de DBSCAN).</li>
           <li>Análisis comparativo justificando la selección de hiperparámetros del modelo final.</li>
         </ul>
         <p><strong>Reflexión:</strong> El proyecto profundizó mi entendimiento en la aplicación de modelos de *clustering* y detección de anomalías en escenarios clínicos. Aprendí a priorizar la **interpretabilidad** sobre la simple optimización métrica en un contexto de toma de decisiones en salud.</p>
@@ -234,6 +234,7 @@
 
 </body>
 </html>
+
 
 
 
