--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
         <p><strong>Objetivos:</strong></p>
         <ul>
           <li>Aplicar y comparar distintos algoritmos de <strong>Clustering</strong> (K-Means, DBSCAN, HDBSCAN) en un dataset de salud.</li>
-          <li>Utilizar técnicas de <strong>Reducción de Dimensionalidad</strong> (PCA, UMAP, t-SNE) para la visualización e identificación de la mejor representación de los datos.</li>
-          <li>Implementar modelos de <strong>Detección de Anomalías</strong> (Isolation Forest, One-Class SVM) para identificar pacientes con patrones clínicos inusuales.</li>
-          <li>Evaluar los resultados del <strong>clustering</strong> utilizando métricas como el <strong>Coeficiente de Silhouette</strong> y el <strong>Índice de Davies-Bouldin</strong>.</li>
+          <li>Utilizar técnicas de <strong>Reducción de Dimensionalidad</strong> (PCA, UMAP, t-SNE).</li>
+          <li>Implementar modelos de <strong>Detección de Anomalías</strong> (Isolation Forest, One-Class SVM).</li>
+          <li>Evaluar los resultados del <strong>clustering</strong>.</li>
           <li>Justificar la elección final del modelo de <strong>clustering</strong> en base a las métricas y la interpretabilidad clínica de los segmentos.</li>
         </ul>
         <p><strong>Tecnologías:</strong> Python, Scikit-learn, UMAP, HDBSCAN, Pandas, Numpy, Matplotlib, Seaborn</p>
@@ -234,6 +234,7 @@
 
 </body>
 </html>
+
 
 
 
