Fix HTML formatting and update CV link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section id="cv" class="compact-section">
     <h2>Currículum Vitae</h2>
     <div class="cv-container">
-      <a href="Currículum Jose Chamorro.pdf" target="_blank" class="cv-button">Descargar CV</a>
+      <a href="CV_Jose_Chamorro_2025.pdf" target="_blank" class="cv-button">Descargar CV</a>
     </div>
   </section>
 
@@ -234,6 +234,7 @@
 
 </body>
 </html>
+
 
 
 
